zapisani odbiorcy, czas polski, export przelewów
